# blockchain-cpp

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  quick_compile.bat
examples/: example4_complete_blockchain.cpp
include/core/: block.h  merkle_tree.h  transaction.h
include/crypto/: sha256.h
src/consensus/: proof_of_stake.cpp  proof_of_work.cpp
src/core/: block.cpp  blockchain.cpp  merkle_tree.cpp  transaction.cpp
src/crypto/: sha256.cpp
